Update the maven-pmd-plugin plugin to 3.22.0 + minor POM improvements